Fixing locale link position to be aligned with logo

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -135,7 +135,7 @@ ul.navbar-nav{
 
 #locale{
   position: absolute;
-  left: 225px;
+  left: 166px;
   a{
     padding: 10px 0px 10px 15px;
   }
