--- a/app/assets/stylesheets/application_rtl.css.scss
+++ b/app/assets/stylesheets/application_rtl.css.scss
@@ -5386,7 +5386,7 @@ ul.navbar-nav a {
   color: #fff;
 }#locale{
   position: absolute;
-  left: 200px;
+  left: 166px;
 }#locale a {
   padding: 10px 15px 10px 0px;
 }.lcl {
